# $Id$

2008-08-05	Ivan Y. Khvostishkov

	* core/OSQL/OrderBy.class.php: nullsFirst(), nullsLast(),
	isNullsFirst(), setNullsFirst() - PosgreSQL 8.3-specific ordering
	feature support.

2008-08-04	Ivan Y. Khvostishkov

	* main/Criteria/Projections/ClassProjection.class.php: proper table
	attached.

	* core/OSQL/SQLRightJoin.class.php: added.

	* core/OSQL/Joiner.class.php: getFirstTable() helper.

	* core/OSQL/TimeIntervalsGenerator.class.php: rewritten in OSQL, but
	still works in PostgreSQL only.

	* core/OSQL/DataType.class.php: added interval.

	* main/DAOs/GenericDAO.class.php: getTotalCount() implemented, with
	correspondent tests.

2008-08-03	Konstantin V. Arkhipov

	* main/DAOs/Workers/CacheDaoWorker.class.php: useless classKey usage
	removed.

	* core/Exceptions/CachedObjectNotFoundException.class.php: new
	exception introduced to avoid useless Cache::NOT_FOUND marking in
	TransparentDaoWorker's childs.

2008-07-21	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: countInRange() - one more useful
	OLAP method, complement of truncate().

	* core/Base/Assert.class.php: isNotEqual() added.

2008-07-20	Ivan Y. Khvostishkov

	* core/Base/IntervalUnit.class.php: helper for time intervals, very
	useful for OLAP.

2008-07-29	Sergey S. Sergeev

	* core/Form/Primitives/PrimitiveIdentifierList.class.php,
	core/Form/Primitives/PrimitiveArray.class.php: fixed check conditions.

2008-07-28	Sergey S. Sergeev

	* main/DAOs/ProtoDAO.class.php: fixed {get,fill,fetch} collections
	by Criteria. Thanks to Konstantin V. Arkhipov.

2008-07-18	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveTimestampRange.class.php: new
	primitive introduced.

2008-07-24	Denis M. Gabaidulin

	* main/Base/AbstractProtoClass.class.php: isPropertyExists method added.

2008-07-24	Dmitry V. Sokolov

	* main/Flow/ControllersCollection.class.php: now handle request
	from active Controller firstly.

2008-07-18	Konstantin V. Arkhipov
